[tool.poetry]
name = "langchain-utils"
version = "0.3.4"
description = ""
authors = ["Teddy Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "langchain_utils" }]
license = "MIT"
homepage = "https://github.com/tddschn/langchain-utils"
repository = "https://github.com/tddschn/langchain-utils"
classifiers = ["Topic :: Utilities"]
keywords = ["langchain", "utils", "LLM", "prompts", "CLI"]

[tool.poetry.scripts]
get-youtube-transcript-prompt = "langchain_utils.get_youtube_transcript_prompt:main"
ytprompt = "langchain_utils.get_youtube_transcript_prompt:main"
get-url-prompt = "langchain_utils.get_url_prompt:main"
urlprompt = "langchain_utils.get_url_prompt:main"
get-pdf-prompt = "langchain_utils.get_pdf_prompt:main"
pdfprompt = "langchain_utils.get_pdf_prompt:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/langchain-utils/issues"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.135"
youtube-transcript-api = "^0.5.0"
pytube = "^12.1.3"
pyperclip = "^1.8.2"
tiktoken = "^0.3.3"
pymupdf = "^1.21.1"
# must use this version of unstructured, or it won't be able to parse certain htmls
unstructured = "0.5.2"
selenium = "^4.8.3"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
better-exceptions = "^0.3.3"
ipython = "^8.12.0"
ipykernel = "^6.22.0"
rich = "^13.3.3"
pyinstrument = "^4.4.0"
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
