[tool.poetry]
name = "langchain-utils"
version = "0.5.2"
description = "Utilities built upon the langchain library"
authors = ["Teddy Xinyuan Chen <45612704+tddschn@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "langchain_utils" }]
license = "MIT"
homepage = "https://github.com/tddschn/langchain-utils"
repository = "https://github.com/tddschn/langchain-utils"
classifiers = ["Topic :: Utilities"]
keywords = ["langchain", "utils", "LLM", "prompts", "CLI"]

[tool.poetry.scripts]
get-youtube-transcript-prompt = "langchain_utils.get_youtube_transcript_prompt:main"
ytprompt = "langchain_utils.get_youtube_transcript_prompt:main"
get-url-prompt = "langchain_utils.get_url_prompt:main"
urlprompt = "langchain_utils.get_url_prompt:main"
get-text-prompt = "langchain_utils.get_text_prompt:main"
textprompt = "langchain_utils.get_text_prompt:main"
get-clipboard-prompt = "langchain_utils.get_clipboard_prompt:main"
clipboardprompt = "langchain_utils.get_clipboard_prompt:main"
get-word-prompt = "langchain_utils.get_word_prompt:main"
wordprompt = "langchain_utils.get_word_prompt:main"
get-html-prompt = "langchain_utils.get_html_prompt:main"
htmlprompt = "langchain_utils.get_html_prompt:main"
get-pdf-prompt = "langchain_utils.get_pdf_prompt:main"
pdfprompt = "langchain_utils.get_pdf_prompt:main"
referral-statement-prompt = "langchain_utils.job_search.lcu_referral_statement:main"
refstmtprompt = "langchain_utils.job_search.lcu_referral_statement:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/tddschn/langchain-utils/issues"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.177"
youtube-transcript-api = "^0.5.0"
pytube = "^12.1.3"
pyperclip = "^1.8.2"
tiktoken = "^0.3.3"
pymupdf = "^1.21.1"
# must use this version of unstructured, or it won't be able to parse certain htmls
unstructured = "0.5.2"
selenium = "^4.8.3"
bs4 = "^0.0.1"
tqdm = "^4.65.0"
pync = { version = "^2.0.3", extras = ["notify"] }


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
better-exceptions = "^0.3.3"
ipython = "^8.12.0"
ipykernel = "^6.22.0"
rich = "^13.3.3"
pyinstrument = "^4.4.0"
icecream = "^2.1.3"
pytest = "^7.3.0"
jinja2 = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
